--- a/templates/pages/login.html.twig
+++ b/templates/pages/login.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
-
-{% block body %}
-<main id="main-connexion">
+ {% block header %}
+        <h1>login Page</h1>
+  {% endblock header %}
+{% block article %}
     <div class="book-connexion">
-
         <form action="" method="POST" class="form-connexion" id="contactForm">
 
             <!-- email field -->
@@ -34,5 +34,4 @@
             </div>
         </form>
     </div>
-</main>
-{% endblock %}
+{% endblock article %}
